# galerians-ps1-decomp

./: .gitignore  CLAUDE.md  README.md  instructions.txt
port/: .gitignore  CMakeLists.txt
port/assets/models_real/: HMD_A.hmd  HMD_B.hmd
port/assets/textures_real/BGTIM_A/: BGTIM_A_0000_TMD.tmd  BGTIM_A_0001_TMD.tmd  BGTIM_A_0003_TMD.tmd  BGTIM_A_0004_TMD.tmd  REAL_0000_TIM_0x00000824.tim  REAL_0001_TIM_0x00013644.tim  REAL_0002_TIM_0x00014610.tim  REAL_0003_TIM_0x00017134.tim  REAL_0004_TIM_0x000183A4.tim  REAL_0005_TIM_0x0001E824.tim  REAL_0006_TIM_0x00031644.tim  REAL_0007_TIM_0x00035364.tim  REAL_0008_TIM_0x0003729C.tim  REAL_0009_TIM_0x00039148.tim  REAL_0010_TIM_0x0003A80C.tim  REAL_0011_TIM_0x0004D62C.tim  REAL_0012_TIM_0x0004F00C.tim  REAL_0013_TIM_0x00061E2C.tim  REAL_0014_TIM_0x00062824.tim  REAL_0015_TIM_0x00075644.tim  REAL_0016_TIM_0x00076610.tim  REAL_0017_TIM_0x00079134.tim  REAL_0018_TIM_0x0007A3A4.tim  REAL_0019_TIM_0x00080844.tim  REAL_0020_TIM_0x00093664.tim  REAL_0021_TIM_0x00097384.tim  REAL_0022_TIM_0x000992BC.tim  REAL_0023_TIM_0x0009B168.tim  REAL_0024_TIM_0x0009C0AC.tim  REAL_0025_TIM_0x0009C50C.tim  REAL_0026_TIM_0x0009C8BC.tim  (+543 more)
port/include/: port_config.h
port/include/assets/: cdb_loader.h  tim_loader.h  tmd_loader.h
port/include/hal/: gte.h  input.h  renderer.h
port/include/ps1/: audio.h  gte.h  input.h  state_machine.h
port/src/: main.cpp
port/src/assets/: cdb_loader.cpp  tim_loader.cpp  tmd_loader.cpp
port/src/engine/: camera.cpp  game_loop.cpp  scheduler.cpp
port/src/hal/: audio.cpp  gte.cpp  input.cpp  renderer.cpp
(+2322 files in other folders)
